Menu fixes
