# src/api/rainwave_dto.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
-#   filename:  tmp.ORX5SWBkp9
-#   timestamp: 2026-04-26T10:54:45+00:00
+#   filename:  tmp.huWQjgokOn
+#   timestamp: 2026-04-26T13:06:20+00:00
 
 from pydantic import BaseModel, Field, RootModel
 from enum import StrEnum
@@ -1080,13 +1080,8 @@ class AllAlbumsPaginated(BaseModel):
     progress: int
 
 
-class AllStationsInfo(BaseModel):
-    field_1: StationInfo = Field(..., alias='1')
-    field_2: StationInfo = Field(..., alias='2')
-    field_3: StationInfo = Field(..., alias='3')
-    field_4: StationInfo = Field(..., alias='4')
-    field_5: StationInfo = Field(..., alias='5')
-    field_6: StationInfo = Field(..., alias='6')
+class AllStationsInfo(RootModel[dict[str, StationInfo]]):
+    root: dict[str, StationInfo]
 
 
 class DeletePowerHourResult(BooleanResult):
