# src/api/rainwave_typeddicts.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  rainwave-openapi.json
-#   timestamp: 2026-04-26T10:54:45+00:00
+#   timestamp: 2026-04-26T13:06:21+00:00
 
 from typing import Any, Literal, NotRequired, TypedDict
 
@@ -1061,17 +1061,7 @@ class AllAlbumsPaginated(TypedDict):
     progress: int
 
 
-AllStationsInfo = TypedDict(
-    'AllStationsInfo',
-    {
-        '1': StationInfo,
-        '2': StationInfo,
-        '3': StationInfo,
-        '4': StationInfo,
-        '5': StationInfo,
-        '6': StationInfo,
-    },
-)
+type AllStationsInfo = dict[str, StationInfo]
 
 
 AllSongsForArtist = TypedDict(
